--- a/css/_variables.scss
+++ b/css/_variables.scss
@@ -3,9 +3,11 @@
 $tradewind: rgba(110,183,158,1);
 $tangerine: rgba(255,145,99,1);
 $palmas: rgba(208,221,65,1);
-$palmas90: rgba(208,221,65,0.9);
 $thunder: rgba(76,76,76,1);
 $nobel: rgba(179,179,179,1);
+$nobel90: rgba(179,179,179,0.9);
 $mercury: rgba(230,230,230,1);
+$mercury90: rgba(230,230,230,0.9);
+$white90: rgba(255,255,255,0.9);
 
 // end of variables
