--- a/css/main.scss
+++ b/css/main.scss
@@ -3,6 +3,7 @@
 @import 'keyframes';
 @import 'typography';
 @import 'general';
+@import 'nav';
 @import 'intro';
 @import 'about';
 @import 'work';
