--- a/css/_contact.scss
+++ b/css/_contact.scss
@@ -1,3 +1,59 @@
 // contact styles
 
+.sectionContact {
+  background: $mercury90;
+}
+
+.wrapperContact {
+	display: flex;
+	flex-direction: row;
+	background: $white90;
+	border: 2px solid $palmas;
+}
+
+.contactTitle {
+	width: 25%;
+	padding: 1.4rem 1.8rem;
+	border-right: 2px solid $palmas;
+}
+
+.contactText {
+	width: 50%;
+	padding: 0 2.4rem 0 1.8rem;
+	border-right: 2px solid $palmas;
+	p {
+		font-size: 1.6rem;
+		line-height: 2.4rem;
+	}
+}
+
+.wrapperContactItems {
+	width: 25%;
+	a {
+		display: inline-block;
+		width: 100%;
+		padding: 1.6rem;
+		font-size: 1.6rem;
+		// text-transform: none;
+		background: lighten($palmas, 20%);
+		color: $thunder;
+	}
+	a:hover,
+	a:active,
+	a:focus {
+		background: lighten($palmas, 10%);
+	}
+	i {
+		font-size: 1.8rem;
+		margin-right: 1rem;
+	}
+}
+
+.contactItem {
+	border-bottom: 2px solid $palmas;
+	&:last-child {
+		border-bottom: none;
+	}
+}
+
 // end of contact styles
