--- a/css/_nav.scss
+++ b/css/_nav.scss
@@ -1,10 +1,10 @@
 // nav styles
 
 nav {
+	display: none;
 	width: 100%;
 	position: fixed;
 	z-index: 199;
-  	padding-top: 25px;
 }
 
 .wrapperNav {
