--- a/css/main.scss
+++ b/css/main.scss
@@ -1,4 +1,5 @@
 @import 'normalize';
+@import 'mixins';
 @import 'variables';
 @import 'keyframes';
 @import 'typography';
@@ -8,3 +9,4 @@
 @import 'about';
 @import 'work';
 @import 'contact';
+@import 'footer';
