Minor cross-browser fixes

--- a/css/_nav.scss
+++ b/css/_nav.scss
@@ -40,6 +40,11 @@ nav {
 	padding: 0.6rem 1.3rem;
 }
 
+.navHome .jay {
+	text-align: right;
+	width: 100%;
+}
+
 .navHome .vee {
 	align-self: flex-end;
 }
