--- a/css/_intro.scss
+++ b/css/_intro.scss
@@ -9,6 +9,10 @@
   background: rgba(255,255,255,0.9);
 }
 
+.svgIntroText {
+  font-family: 'Montserrat', sans-serif;
+}
+
 .svgIntroText-name {
   animation: fadeInNames 4s ease;
 }
