--- a/css/_contact.scss
+++ b/css/_contact.scss
@@ -33,30 +33,45 @@
 
 .wrapperContactItems {
 	width: 25%;
+	display: flex;
+	flex-direction: column;
+	justify-content: space-between;
+}
+
+.contactItem {
+	position: relative;
+	flex-grow: 1;
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	border-bottom: 2px solid $palmas;
+	&:last-child {
+		border-bottom: none;
+	}
 	a {
-		display: inline-block;
+		display: block;
 		width: 100%;
+		z-index: 299;
 		padding: 1.6rem;
 		font-size: 1.6rem;
-		// text-transform: none;
-		background: lighten($palmas, 20%);
 		color: $thunder;
 	}
-	a:hover,
-	a:active,
-	a:focus {
+	a:hover + .contactItemBg,
+	a:active + .contactItemBg,
+	a:focus + .contactItemBg {
 		background: lighten($palmas, 10%);
 	}
 	i {
 		font-size: 1.8rem;
 		margin-right: 1rem;
 	}
-}
-
-.contactItem {
-	border-bottom: 2px solid $palmas;
-	&:last-child {
-		border-bottom: none;
+	.contactItemBg {
+		position: absolute;
+		width: 100%;
+		top: 0;
+		left: 0;
+		bottom: 0;
+		background: lighten($palmas, 20%);
 	}
 }
 
