--- a/css/_work.scss
+++ b/css/_work.scss
@@ -48,6 +48,9 @@
 
 .workTitle {
 	width: 25%;
+	display: flex;
+	flex-direction: column;
+	justify-content: space-between;
 	h2 {
 		margin-bottom: 2rem;
 	}
@@ -74,6 +77,7 @@
 }
 
 .workTitleItem {
+	flex-grow: 1;
 	padding: 1.8rem;
 	border-bottom: 2px solid $tangerine;
 	&:last-child {
@@ -84,6 +88,7 @@
 .workTitleMain {
 	position: relative;
 	padding: 1.4rem 1.8rem;
+	flex-grow: 2;
 }
 
 .workTitleSkills {
@@ -105,6 +110,7 @@
 
 .workTitleButton {
 	padding: 0;
+	flex-grow: 0;
 	a {
 		display: inline-block;
 		width: 100%;
