--- a/css/_about.scss
+++ b/css/_about.scss
@@ -65,41 +65,128 @@
 	display: flex;
 	flex-direction: column;
 	justify-content: space-between;
-	padding: 1.8rem;
+	padding: 1.4rem 1.8rem;
 }
 
 .skillsTextItem {
 	width: 100%;
 	display: flex;
 	flex-direction: row;
-	margin-bottom: 1.6rem;
+	margin-bottom: 1rem;
 	&:last-child {
 		margin-bottom: 0;
 	}
-	.skillsTextItemTitle {
-		width: 23%;
-		h3 {
-			margin-bottom: 1.4rem;
-		}
-		h3:last-child {
-			margin-bottom: 0;
-		}
+}
+
+.skillsTextItemTitle {
+	width: 23%;
+	h3 {
+		margin-bottom: 1.4rem;
+		line-height: 2.4rem;
 	}
-	ul {
-		width: 77%;
+	h3:last-child {
+		margin-bottom: 0;
 	}
-	ul li {
+}
+
+.skillsTextItemList {
+	width: 77%;
+	li {
 		display: inline;
 		font-size: 1.6rem;
 	  	font-weight: 400;
+	  	line-height: 2.4rem;
 	  	color: $thunder;
 	}
-	ul li:after {
+	li:after {
 		content: " | ";
 		color: $nobel;
 	}
-	ul li:last-child:after {
+	li:last-child:after {
 		content: none;
+	}
+}
+
+// media queries
+
+@media all and (max-width: 950px) {
+	.skillsTextItemTitle {
+		width: 25%;
+	}
+	.skillsTextItemList {
+		width: 75%;
+	}
+}
+
+@media all and (max-width: 900px) {
+	.skillsTextItemTitle {
+		width: 28%;
+	}
+	.skillsTextItemList {
+		width: 72%;
+	}
+}
+
+@media all and (max-width: 800px) {
+	.skillsTextItemTitle {
+		width: 30%;
+	}
+	.skillsTextItemList {
+		width: 70%;
+	}
+}
+
+@media all and (max-width: 750px) {
+	.skillsTextItemTitle {
+		width: 32%;
+	}
+	.skillsTextItemList {
+		width: 68%;
+	}
+}
+
+@media all and (max-width: 750px) {
+	.skillsTextItemTitle {
+		width: 35%;
+	}
+	.skillsTextItemList {
+		width: 65%;
+	}
+}
+
+@media all and (max-width: 600px) {
+	.wrapperAboutMain {
+		flex-direction: column;
+		flex-wrap: wrap;
+	}
+	.aboutTitle {
+		order: 1;
+		width: 100%;
+		border-bottom: 2px solid $palmas;
+		h2 {
+			margin-bottom: 1rem;
+		}
+	}
+	.aboutText {
+		order: 2;
+		width: 100%;
+		border-right: none;
+	}
+	.wrapperSkills {
+		flex-direction: column;
+		flex-wrap: wrap;
+	}
+	.skillsTitle {
+		width: 100%;
+		border-right: none;
+		border-bottom: 2px solid $palmas;
+	}
+	.skillsText {
+		width: 100%;
+	}
+	#svgAbout line,
+	#svgSkills line {
+		stroke-width: 14;
 	}
 }
 
